Bunch of new updates
- New graphics!
- New UI!
- New webpage design
- Fixed pesky bug that unfairly allowed  prioritizing the left key control
- Added WASD control support
- Cleaned up a few more magic numbers
- Changed game view size
- Improved the platform generation rules to adapt better
- Improved mobile UI D-Pad

--- a/index.html
+++ b/index.html
@@ -6,14 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jumpy | Platformer</title>
     
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./resources/style.css">
 </head>
 <body>
-    <script src="sketch.js"></script>
+    <header>
+        <!-- <h1>Jumpy Platformer</h1> -->
+        <img src="./public/logo.png" alt="logo">
+    </header>
+    
+
+
+    <div id="sketch"></div>
+
+
+    <script src="./script.js"></script>
+    <script src="./resources/sketch.js"></script>
     <script src="./dependencies/p5.js"></script>
     <script src="./dependencies/p5.dom.min.js"></script>
     <script src="./dependencies/mobile-detect.js"></script>
-
     <script src="./classes/platform.js"></script>
     <script src="./classes/player.js"></script>
     <script src="./classes/game.js"></script>
